--- a/crm-frontend/style.css/style.css
+++ b/crm-frontend/style.css/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     background-color: #E5E5E5;
 }
 
@@ -11,7 +12,37 @@ body {
     display: flex;
 }
 
-h1, h2 {
+td {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+/* кнопки */
+.btn {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+.btnChange {
+    padding-left: 14px;
+    background-image: url(../img/change.svg);
+    background-position: left 0px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.btnDelete {
+    padding-left: 14px;
+    background-image: url(../img/delete.svg);
+    background-position: left center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+h1,
+h2 {
     margin: 0;
 }
 
@@ -41,22 +72,39 @@ h1, h2 {
 
 .clients__title {
     margin: 0 20px;
+    margin-bottom: 26px;
     font-size: 24px;
 }
 
 /* table  */
 
 .clients__table {
+    width: 100%;
     padding: 0 20px;
     margin: 0;
+    margin-bottom: 40px;
     font-size: 12px;
     font-weight: 400;
     line-height: 16px;
     color: #B0B0B0;
+    border-spacing: 0px;
+    border-collapse: collapse;
 }
 
 .thId {
+    padding-right: 13px;
     color: #9873FF;
+    background-image: url(../img/id.svg);
+    background-position: right center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.thFio {
+    background-image: url(../img/fio.svg);
+    background-position: 195px center;
+    background-repeat: no-repeat;
+    cursor: pointer;
 }
 
 .clients__tbody {
@@ -84,21 +132,17 @@ h1, h2 {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* .modal-content {
-    width: 400px;
-    min-height: 450px;
-    padding: 30px;
-    background-color: white;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+.clients__button {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 12.5px 26.5px;
+    padding-left: 58px;
+    color: #9873FF;
+    background-color: transparent;
+    border: 1px solid #9873FF;
+    background-image: url(../img/person.svg);
+    background-position: 26px 10px;
+    background-repeat: no-repeat;
+    cursor: pointer;
 }
-
-.close {
-    right: 15px;
-    top: 15px;
-    position: absolute;
-    background-color: white;
-    border: none;
-} */
