--- a/crm-frontend/style.css/style.css
+++ b/crm-frontend/style.css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     background-color: #E5E5E5;
+    box-sizing: border-box;
 }
 
 .container {
@@ -14,8 +15,12 @@ body {
 
 td {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     border: none;
+}
+
+tr {
+    height: 60px;
 }
 
 /* кнопки */
@@ -91,6 +96,10 @@ h2 {
     border-collapse: collapse;
 }
 
+.clients__thead {
+    height: 60px;
+}
+
 .thId {
     padding-right: 13px;
     color: #9873FF;
@@ -145,4 +154,166 @@ h2 {
     background-position: 26px 10px;
     background-repeat: no-repeat;
     cursor: pointer;
+}
+
+.btnSave {
+    margin: 0 auto;
+    font-size: 14px;
+    padding: 12.5px 35px;
+    background-color: #9873FF;
+    border: none;
+    color: white;
+    display: block;
+    cursor: pointer;
+}
+
+.modalCloseButton {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    width: 21px;
+    height: 21px;
+    cursor: pointer;
+    background-image: url(../img/close.svg);
+    background-repeat: no-repeat;
+}
+
+/* модальное окно удаление клиента */
+
+.modalDelete {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modalDeleteActive {
+    position: absolute;
+    width: 450px;
+    height: 215px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(255, 255, 255);
+    cursor: default;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 22px;
+}
+
+.modalDeleteH1 {
+    margin-bottom: 11px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 25px;
+    letter-spacing: 0px;
+}
+
+.modalDeleteP {
+    margin: 0 auto;
+    margin-bottom: 25px;
+    max-width: 250px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0px;
+
+}
+
+.modalDeleteCancel {
+    margin: 0;
+    margin-top: 5px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0px;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.hours {
+    display: inline;
+    margin: 0;
+    margin-left: 10px;
+    color: #B0B0B0;
+
+}
+
+/* ////////////////////// */
+
+.modalName {
+    width: 390px;
+    margin-bottom: 32px;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid grey;
+    opacity: 0.5;
+}
+
+
+/* модальное окно изменения клиента */
+.modalChangeActive {
+    position: absolute;
+    width: 450px;
+    min-height: 400px;
+    left: 50%;
+    top: 50%;
+    padding: 25px 30px;
+    transform: translate(-50%, -50%);
+    background-color: rgb(255, 255, 255);
+    cursor: default;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 22px;
+}
+
+.modalChangeH1 {
+    margin: 0;
+    margin-right: 9px;
+    margin-bottom: 16px;
+    display: inline;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 25px;
+    letter-spacing: 0px;
+}
+
+.modalChangePID {
+    margin: 0;
+    margin-top: 6px;
+    font-family: Open Sans;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0px;
+    color: #B0B0B0;
+}
+
+.modalNameChange {
+    width: 100%;
+    height: 24px;
+    margin-bottom: 15px;
+    padding: 0;
+    font-family: Open Sans;
+    font-size: 14px;
+    /* font-weight: 600; */
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+}
+
+.surnameInputAbove {
+    margin: 0;
+    font-family: Open Sans;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 14px;
+    text-align: left;
+    color: #B0B0B0;
 }
