--- a/crm-frontend/style.css/style.css
+++ b/crm-frontend/style.css/style.css
@@ -127,7 +127,7 @@ h2 {
 }
 
 
-/* модальное окно */
+/* модальное окно добавления клиента */
 
 .modal {
     display: none;
@@ -139,6 +139,22 @@ h2 {
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modalAddDiv {
+    width: 450px;
+    min-height: 400px;
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.modalDivFio {
+    margin: 24px 30px;
+    margin-bottom: 25px;
 }
 
 .clients__button {
@@ -158,6 +174,7 @@ h2 {
 
 .btnSave {
     margin: 0 auto;
+    margin-bottom: 5px;
     font-size: 14px;
     padding: 12.5px 35px;
     background-color: #9873FF;
@@ -176,6 +193,78 @@ h2 {
     cursor: pointer;
     background-image: url(../img/close.svg);
     background-repeat: no-repeat;
+}
+
+.divOpenContacts {
+    background-color: rgba(200, 197, 209, 0.3);
+    margin-bottom: 25px;
+}
+
+.btnOpenContacts {
+    padding: 8px 0;
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+    background-image: url(../img/plus.svg);
+    background-position: 145px center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.modalDelP {
+    margin: 0;
+    margin-bottom: 25px;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.styleInput {
+    min-height: 37px;
+    display: flex;
+    outline: 1px solid #C8C5D1;
+}
+
+.modalSelect {
+    width: 123px;
+    border: none;
+    outline: none;
+    background-color: #E7E5EB;
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+}
+
+.modalInput {
+    width: 100%;
+    padding-left: 12px;
+    border: none;
+    outline: none;
+    border-left: 1px solid #C8C5D1;
+}
+
+.inputCloseBtn {
+    width: 27px;
+    border: none;
+    outline: none;
+    border-left: 1px solid #C8C5D1;
+    background-image: url(../img/inputClose.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+table img {
+    margin-right: 7px;
+    white-space: pre-wrap;
 }
 
 /* модальное окно удаление клиента */
@@ -244,6 +333,13 @@ h2 {
 
 }
 
+.form__change {
+    display: none;
+    padding: 25px 30px;
+}
+
+
+
 /* ////////////////////// */
 
 .modalName {
@@ -253,6 +349,10 @@ h2 {
     border: none;
     border-bottom: 1px solid grey;
     opacity: 0.5;
+}
+
+.modalName:last-child {
+    margin: 0;
 }
 
 
